--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                             </ol>
                             <hr>
                             <label id="check"><input type="checkbox" id="box">I agree to the server rules.</label>
+                            <p>All the rules are explained in detail in <span  class="ping">#information</span>.</p>
                             <p class="warning" id="ruleWarn">⚠️ You did not agree to the server rules!</p>
                             <button class="button" id="next">Next</button>
                 </div>
