--- a/done.html
+++ b/done.html
@@ -4,6 +4,14 @@
         <meta charset='UTF-8'>
         <meta name='viewport' content='width=device-width, initial-scale=1.0'>
         <meta http-equiv='X-UA-Compatible' content='ie=edge'>
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="r/IBO Discord Server" />
+        <meta property="og:description" content="Online Verification System for the r/IBO Discord Server." />
+        <meta property="og:url" content="https://unnamedfreak.github.io/IBO-Discord-Web-Verification" />
+        <meta property="og:image" content="/IBO-Discord-Web-Verification/assets/embed.jpg" />
+        <meta property="og:image:width" content="400" />
+        <meta property="og:image:height" content="400" />
+        <meta property="og:image:alt" content="r/IBO Online Verification" />
         <title>r/IBO Discord Server</title>
         <link rel="stylesheet" href="styles.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
