--- a/index.html
+++ b/index.html
@@ -29,15 +29,79 @@
                         <button class="themeSwitch"></button>
                     </div>
                             <ol>
-                                <li>Be polite & respectful at all times in accordance with the <a href="https://discordapp.com/guidelines" target="_blank">Discord Community Guidelines</a>.</li>
-                                <li>The posting of, or encouraging others to post, content forbidden under <a href="https://support.discordapp.com/hc/en-us/articles/360024871991-Discord-Partnership-Code-of-Conduct" target="_blank">Discord’s Code of Conduct for partnered servers</a> is prohibited.</li>
-                                <li>Academic dishonesty is strictly prohibited.</li>
-                                <li>Do not tag the entire staff team (<span class="ping">@Staff</span>) unless there is an urgent situation requiring an immediate response.</li>
-                                <li>‘Backseat moderating’ (attempting to assume the authority of a staff member) beyond gently reminding other users of the rules as-written is not permitted.</li>
-                                <li>Stay on topic in the channel you are in.</li>
-                                <li>Wait at least 15 minutes after asking an academic question before tagging the subject helpers in that subject’s channel.</li>
-                                <li>You must ask for staff permission before advertising anything.</li>
-                                <li>You must have a username/nickname that can be mentioned by typing it with a typical English keyboard.</li>
+                                <li id="rule1">
+                                    <span class="rule">Be polite & respectful at all times in accordance with the <a href="https://discordapp.com/guidelines" target="_blank">Discord Community Guidelines</a>.</span>
+                                    <span class="ruleText">This means (but isn’t limited to):
+                                    <br>a) Don’t insult or attack others (directly or passive-aggressively).
+                                    <br>b) Don’t deliberately try to irritate, provoke, or 'rile up' others.
+                                    <br>c) Respect others’ privacy - don’t harass people via DMs, pings, etc. when they have explicitly asked you to stop, and don’t leak others’ private information without their consent.
+                                    <br>Etc.</span>
+                                </li>
+
+                                <li id="rule2">
+                                    <span class="rule"">Discriminatory behavior (using slurs, derogatory attacks, posting hate symbols, etc.) is forbidden.</span>
+                                    <span class="ruleText">This covers (but isn't limited to): racism, sexism, ableism, homophobia, transphobia, religious bigotry, and rape apologia.</span>
+                                </li>
+
+                                <li id="rule3">
+                                    <span class="rule">Be mindful of ongoing conversations.</span>
+                                    <span class="ruleText">Don’t derail an existing conversation in a channel or unnecessarily spam messages (outside of <span class="ping">#spam</span>).</span>
+                                </li>
+
+                                <li id="rule4">
+                                    <span class="rule">NSFW content (as per <a href="https://support.discordapp.com/hc/en-us/articles/360024871991-Discord-Partnership-Code-of-Conduct" target="_blank">Discord’s Code of Conduct</a>, aka CoC)</span>
+                                    <span class="ruleText">a) Outside NSFW-marked channels: All non-academic, overt and/or excessive mentions of sexual acts or graphic violence are forbidden.
+                                    <br>b) In NSFW-marked channels only: Discussion of sex, violence, etc. are allowed, but content that visually & explicitly displays sexual acts/organs or nudity isn’t allowed.</span>
+                                </li>
+
+                                <li id="rule5">
+                                    <span class="rule">Academic dishonesty is strictly prohibited.</span>
+                                    <div class="ruleText">Follow all IB academic integrity regulations (see <a href="http://bit.ly/37af71d">this PDF</a>) and those of other academic institutions where relevant. This means (but isn’t limited to):
+                                    <br>a) Don’t discuss any content from an official IB exam less than 24 hours after the exam took place (general comments on things like difficulty are okay).
+                                    <br>b) Don’t ask people to give you complete topics/ideas for coursework (IAs, EEs, etc.) or to help you write them (asking for help in developing an existing idea you have is okay).
+                                    <br>c) Don’t share or ask for past IB exam papers that the IB hasn’t released publicly (i.e. not on the IB store).
+                                    <br>Etc.</div>
+                                </li>
+
+                                <li id="rule6">
+                                    <span class="rule">Don’t ping the staff team (<span class="ping">@Staff</span>) or the admins (<span class="ping" id="adminPing">@Admin</span>) unless something urgent occurs that needs an immediate response from all online staff members (e.g. multiple organized trolls, a server raid, etc.).</span> <br>For less urgent issues, you can contact the staff team by DMing <span class="ping">@Mod-Mail</span> or any staff member.
+                                </li>
+
+
+                                <li id="rule7">
+                                    <span class="rule">Backseat moderating (vigilante rule enforcement beyond simply quoting the rules) is forbidden.</span> 
+                                    <span class="ruleText">If you want staff to address something or disagree with the handling of an issue by the staff team as a whole, DM <span class="ping">@Mod-Mail</span> or any staff member.
+                                    <br><em>(Note: To complain about a specific moderator’s behavior, DM any admin; to complain about an admin’s behavior, DM the server owner, <span class="ping">@kallak</span>).</em></span>
+                                </li>
+
+                                <li id="rule8">
+                                    <span class="rule">As much as possible, stay on topic in the channel you are in.</span>
+                                    <span class="ruleText">E.g. IB discussions in <span class="ping">#ibtalk</span>, programming in <span class="ping">#programming</span>, etc. Briefly drifting off-topic is okay, but please try your best not to, or to move to an appropriate channel. General conversations, or discussions of topics without their own channels, should go in <span class="ping">#off-topic-1</span> and <span class="ping">#off-topic-2</span>.</span>
+                                </li>
+
+                                <li id="rule9">
+                                    <span class="rule">After asking an academic question in a subject channel, wait at least 15 minutes before pinging the subject helpers to ask them to help you.</span>
+                                    <span class="ruleText">Our server helpers are volunteers who willingly give up their time to help here. They should be given respect and patience in return.</span>
+                                </li>
+
+                                <li id="rule10">
+                                    <span class="rule">You must ask for staff permission before advertising anything.</span>
+                                    <span class="ruleText">The staff team will use these criteria to decide whether or not to allow something to be advertised:
+                                    <br>a) Paid resources, communities, subscriptions, etc. will not be allowed.
+                                    <br>b) Free resources, communities, etc. must guard against academic misconduct and protect users’ privacy sufficiently to be considered.
+                                    <br>
+                                    <br>The staff team reserves the right to make final decisions on advertising at our discretion in order to enforce our other server rules and protect our users.</span>
+                                </li>
+
+                                <li id="rule11">
+                                    <span class="rule">At least some of your display name (the name shown in chat when you send a message) must be typeable with a typical English keyboard,</span> enough so that your user profile would appear if another user attempts to ping you by typing <span class="ping">@[displayname]</span> in chat.
+                                    <span class="ruleText">E.g. If your username is JohnSmith then 𝓙𝓸𝓱𝓷𝓢𝓶𝓲𝓽𝓱 wouldn’t be okay, but John𝓢𝓶𝓲𝓽𝓱 would be okay because your user profile would appear if someone typed <span class="inlineCode">@John</span>.</span>
+                                </li>
+
+                                <li id="rule12">
+                                    <span class="rule">Follow all channel-specific guidelines outlined in a channel's pinned messages.</span>
+                                    <span class="ruleText">Not all channels will have channel-specific guidelines, but the staff team may set such guidelines whenever & wherever necessary to best maintain the spirit/purpose of a channel.</span>
+                                </li>
                             </ol>
                             <hr>
                             <label id="check"><input type="checkbox" id="box">I agree to the server rules.</label>
@@ -73,6 +137,10 @@
                             <button class="button" id="verify" disabled="true">Verify using Discord</button>
                 </div>
             </div>
+        </div>
+        <div id="cookieDialogue">
+            <p style="display: inline; line-height: 35px;">This website uses cookies to remember you have logged in. Your Discord login information is neither seen or stored. <a href="https://cookie-consent.app.cloudstinger.com/why-cookies.html">Learn More</a></p>
+            <button id="acceptCookies"></button>
         </div>
     </body>
 </html>
