Removed Cookie Consent Message
- Actually hid it hehehe

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </div>
             </div>
         </div>
-        <div id="cookieDialogue">
+        <div id="cookieDialogue" hidden>
             <p style="display: inline; line-height: 35px;">This website uses cookies to remember you have logged in. Your Discord login information is neither seen or stored. <a href="https://cookie-consent.app.cloudstinger.com/why-cookies.html">Learn More</a></p>
             <button id="acceptCookies"></button>
         </div>
